--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,26 +1,15 @@
 
-@font-face          { font-family: test; src: url(../fonts/flbigmugline/fl-bigmug-line.ttf); }
-
-
-html *              { font-size: 100%; font-weight: bold; font-family: "test"; }
-a                   { font-size: 17px; color: #222222; text-decoration: none; transition: .5s; }
-a:hover             { color: #F9B129;}
-
-
-.flex               { display: flex; }
-.flexColumn         { display: flex; flex-direction: column; }
-.centerBloc         { display: flex; align-items: center; justify-content: center; } /* Centre un bloc enfant */
-.centerText         { text-align: center; } /* Centre le texte */
-.img                { width: 70%;}
-html                { scroll-behavior: smooth; }
-
 /* ---------- Header ----------*/
 
 header              { height: 100px; background: rgb(255, 255, 255);}
 #headerContainer    { width: 60%; height: 90%; justify-content: space-between;}
 .headerEnds         { width: 17%; }
 nav                 { width: 60%; }
-#numero             { width: fit-content;}
+a:hover             { color: #F9B129;}
+
 li                  { width: fit-content; padding: 0 10px;}
-.dot                { border-left: 1px solid black;}
+.dot                { border-left: 1px solid rgb(202, 202, 202);}
+#home a             { color: #F9B129;}
+
+#numero             { width: fit-content;}
 
