--- a/assets/css/accueil.css
+++ b/assets/css/accueil.css
@@ -9,3 +9,35 @@ a                   { font-size: 17px; color: #222222; text-decoration: none; tr
 .centerText         { text-align: center; } /* Centre le texte */
 .img                { width: 70%;}
 html                { scroll-behavior: smooth; }
+
+/* ---------- Main ----------*/
+main        { height: 5300px; background: white;}
+.mainImg    { width: 100%;}
+
+/* ---------- Carousel ----------*/
+#carousel           { height: 740px; background: salmon;}
+
+/* ---------- About Restoral ----------*/
+#aboutRestoral      { height: 833px; background: brown;}
+
+/* ---------- Valeurs ----------*/
+#valeurs            { height: 400px; background: darkcyan;}
+
+/* ---------- Carte ----------*/
+#carte              { height: 650px; background: darkslategrey;}
+
+/* ---------- Order Online ----------*/
+#orderOnline        { height: 572px; background: darkgoldenrod;}
+
+/* ---------- Our Chefs ----------*/
+#ourChefs           { height: 650px; background: darkolivegreen;}
+
+/* ---------- Our Partners ----------*/
+#ourPartners        { height: 400px; background: darksalmon;}
+
+/* ---------- Gallery ----------*/
+#gallery            { height: 394px; background: darkseagreen;}
+.gallery            { width: 480px; background: #9c9c9c;}
+
+/* ---------- Our Testimonials ----------*/
+#ourTestimonials    { height: 650px; background: darkslateblue;}
