--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,3 +1,16 @@
+@font-face          { font-family: test; src: url(../fonts/flbigmugline/fl-bigmug-line.ttf); }
+
+html *              { font-size: 100%; font-weight: bold; font-family: "test"; }
+a                   { font-size: 17px; color: #222222; text-decoration: none; transition: .5s; }
+
+.flex               { display: flex; }
+.flexColumn         { display: flex; flex-direction: column; }
+.centerBloc         { display: flex; align-items: center; justify-content: center; } /* Centre un bloc enfant */
+.centerText         { text-align: center; } /* Centre le texte */
+.img                { width: 70%;}
+.cta                { background: #EC5353; padding: 20px 25px; border-radius: 50px; color: aliceblue;}
+.cta:hover          { background: aliceblue; color: #F9B129; box-shadow: 0 0 4px #F9B129;}
+html                { scroll-behavior: smooth; }
 
 /* ---------- Footer ----------*/
 
