--- a/assets/css/team.css
+++ b/assets/css/team.css
@@ -7,8 +7,8 @@ main
 .rectangle
 {
 height: 200px;
-width: ;
-background: url(../assets/images/ely.jpg);no-repeat; background-position: center;
+width:100% ;
+background: url(../images/ely.jpg);no-repeat; background-position: center;
 }
 h1
 {
@@ -19,7 +19,7 @@ h1
     
       width: 200px;
         height: 200px;
-        background-image: url(../assets/images/Diop.jpg);
+        background-image: url(../images/Diop.jpg);
         background-size: cover;
         border-radius: 90%;
         overflow: hidden;
