--- a/assets/css/team.css
+++ b/assets/css/team.css
@@ -10,7 +10,7 @@ height: 200px;
 width: 100%;    
 background: url(../images/ely.jpg)no-repeat; background-position: center;
 }
-h1
+main h1
 {
     margin-left: 44%;
 }
@@ -25,14 +25,14 @@ h1
         overflow: hidden;
     
 }
-p
+main p
 {
     font-size: 15px;
     color: black;
     margin-left: 20%;
 }
 
-h3
+main h3
 {
     font-size: 25px;
     color: red;
