--- a/assets/css/accueil.css
+++ b/assets/css/accueil.css
@@ -82,7 +82,7 @@ main p              { font-weight: 100; font-size: 16px; color: #BCBCBC; }
 .chefsName          { height: 10%; color: #F9B129;}
 .chefsTitle         { height: 5%; }
 .chefsMedia         { height: 10%; }
-.media              { width: 23%; height: 100%; border-radius: 50%; border: 1px solid #F9B129; }
+.media              { height: 25px; width: 25px; margin: 10px 5px 0;  border-radius: 50%; border: 1px solid #F9B129; }
 .media:has(a:hover) { box-shadow: 0 0 4px #F9B129;}
 
 /* ---------- Our Partners ----------*/
