--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -18,6 +18,7 @@ footer              { width: 100%; height: 400px;}
 footer *            { font-size: 15px; font-weight: 100; color: #BCBCBC;}
 footer h3           { font-weight: bold;}
 footer h2           { font-weight: bold; font-size: 28px;}
+footer p            { margin: 0;}
 .footerImg          { width: 100%;}
 .footerContainer    { width: 70%; height: 80%; }
 
@@ -36,7 +37,8 @@ footer h2           { font-weight: bold; font-size: 28px;}
 .menu               { height: 40%; justify-content: flex-start; }
 #menuList           { height: 60%; line-height: 150%;}
 
-#opening h2         { font-size: 20px;}
+#opening h2         { font-size: 20px; margin-bottom: 15px;}
+#hoursClock         { width: 15px; height: 15px; margin-right: 10px;}
 
 #news               { height: 50%; justify-content: flex-start;}
 #email              { width: 70%; height: 80%; border-radius: 50px; border: none; text-indent: 10px;}
@@ -44,7 +46,7 @@ footer h2           { font-weight: bold; font-size: 28px;}
 
 #follow h2          { font-size: 20px;}
 #followMedia        { justify-content: flex-start; }
-.media              { height: 25px; width: 25px; margin: 10px 5px 0; }
+.mediaa             { height: 25px; width: 25px; margin: 10px 5px 0;}
 
 
 #footerDown         { height: 100px; background: #333333; }
