--- a/assets/css/team.css
+++ b/assets/css/team.css
@@ -1,18 +1,20 @@
 main
 {
-    
+    height: 1000px;
 }
 
 
 .rectangle
 {
-height: 200px;
+height: 150px;
 width: 100%;    
 background: url(../images/ely.jpg)no-repeat; background-position: center;
 }
 main h1
 {
     margin-left: 44%;
+    font-size: 30px;
+    margin-top: 20px;
 }
 .bloc1
 {
@@ -29,14 +31,16 @@ main p
 {
     font-size: 15px;
     color: black;
-    margin-left: 20%;
+    margin-left: 60px;
+    margin-top: 20px;
 }
 
 main h3
 {
     font-size: 25px;
     color: red;
-    margin-left: 10%;
+    margin-left: 30px;
+    margin-top: 10px;
 }
 
 
@@ -45,7 +49,7 @@ main h3
     grid-template-columns: repeat(3, 1fr);
     grid-column-gap: 30px;
     display: flex;
-   
+   margin-top: 50px;
     justify-content: center;
 }
 
@@ -60,6 +64,7 @@ main h3
     border: 1px solid black;
     border-radius: 100%;
     margin-left: 10px;
+    margin-top: 20px;
 }
 .aly
 {
